--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en-us" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Guessing Game</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-
+    <div>
+    <h1>Hangman</h1>
+    <div>
   </body>
+  <script type="text/javascript" src="assets/javascript/game.js"></script>
 </html>
