--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div>
-    <h1>Hangman</h1>
+    <div class="game">
+    <img src="assets/images/rivers.jpg" />
+    <h1 id="hangman">Hangman</h1>
     <div>
   </body>
   <script type="text/javascript" src="assets/javascript/game.js"></script>
