--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div class="game">
     <img src="assets/images/rivers.jpg" />
     <h1 id="hangman">Hangman</h1>
+    <h2 id="guess">guessedletters</h2>
+    <h2 id="letter">letter</h2>
     <div>
   </body>
   <script type="text/javascript" src="assets/javascript/game.js"></script>
